# zerodha-mcp

./: .gitignore  README.md  __init__.py  auth.py  client.py  pyproject.toml  server.py
